# by

./: .ghci  README.md  by.cabal  default.nix  flake.nix  shell.nix
by/: CHANGELOG.md  LICENSE  by.cabal  pkg.nix
by/c/: by.c  by.h
by/hs/: By.hs  Interval.hs
by/test/: Main.hs
c/: by.c  by.h  by_base16.c  by_base16.h  by_base16__avx2.c  by_base16__scalar.c  by_base16__ssse3.c
hs/: By.hs
hs/By/: Interval.hs
nix/: default.nix  sources.json
test/: Main.hs
