cabal-version: 2.4
name: by
version: 0.1.0
license: Apache-2.0
license-file: LICENSE
extra-source-files: README.md CHANGELOG.md
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Copyright (c) Renzo Carbonara 2020
category: Bytes
build-type: Simple
synopsis: Memory things
description: Memory things
homepage: https://github.com/k0001/by
bug-reports: https://github.com/k0001/by/issues
tested-with: GHC ==9.2.5, GHC ==9.4.3

common basic
  default-language: Haskell2010
  ghc-options: -O2 -Wall -Werror=incomplete-patterns
  build-depends:
    base ==4.*,
    bytestring,
    constraints,
    tagged,

library
  import: basic
  hs-source-dirs: hs
  cc-options: -Werror -Wall -Wextra -O3
  include-dirs: c/
  c-sources:
    c/by.c
    c/by_base16.c
    c/by_base16__avx2.c
    c/by_base16__scalar.c
    c/by_base16__ssse3.c
  exposed-modules: By
  build-depends:
    binary,
    memzero,

test-suite test
  import: basic
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    hedgehog,
    by,
    constraints,
    tasty,
    tasty-hedgehog,
    tasty-hunit,

